Fix T56224: Blender2.8 will force a quit when trying to open a scene containing clip track created by blender 2.79.

Beautiful example of typo going unoticed and firing back up in totally
unexpected place years later. Guess nobody actually duplicated a Clip
data-block before! :P

Most likely own fault, during refactor of ID copying code.